--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
+h1, h2, h3, h4, h5, h6, p{
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+}
+
+.options-container{
+  width: 50%;
+  height: 100vh;
+  background-color: #d4e09b;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.viewer-container{
+  background-color: #f6f4d2;
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 768px) {
+  .App{
+    flex-direction: column;
   }
-  to {
-    transform: rotate(360deg);
+  .options-container, .viewer-container{
+    width: 100%;
   }
+  .options-container{
+    height: 100%;
+  }
+  .viewer-container{
+    height: 100%;
+    padding: 30px;
+  }
+
 }
