Layout done, LOADER pending

--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -1,8 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;400;700&display=swap');
+
+
 .select{
-    background-color: #f6f4d2;
-    border-radius: 4px;
-    padding: 10px 0%;
-    margin: 10px 0px;
+    background-color: #FFFBF5;
+    box-shadow: 0px 2px 4px rgba(36, 21, 0, 0.1);
+    border-radius: 3px;
+    padding: 9.5px 16px;
+    margin: 16px 0px;
     width: 300px;
     border: none;
+    width: 240px;
+
+    font-family: 'Inria Sans';
+    color: #241500;
+    font-size: 13px;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; 
+    color: #241500;
+
+    background: #FFFBF5 url('./assets/down-arrow.png') 97% center no-repeat ;
 }
+
+
+@media only screen and (max-width: 768px) {
+    .select{
+        margin: 12px 0px;
+    }
+  }
+
