--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,6 +1,22 @@
 .loader-container{
-    background-color: #FFF5E6;
-    background-color: red;
     width: 100%;
-    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.loader-img{
+    width: 70%;
+    margin-top: 83px;
+}
+
+@media only screen and (max-width: 768px) {
+    .loader-container{
+        margin: auto;
+    }
+    .loader-img{
+        width: 100%;
+        margin-top: 0;
+    }
+
 }
