--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -2,7 +2,7 @@
 
 
 .select{
-    background-color: #FFFBF5;
+    background-color: #fff5e6;
     box-shadow: 0px 2px 4px rgba(36, 21, 0, 0.1);
     border-radius: 3px;
     padding: 9.5px 16px;
@@ -20,13 +20,14 @@
     appearance: none; 
     color: #241500;
 
-    background: #FFFBF5 url('./assets/down-arrow.png') 97% center no-repeat ;
+    background: #fff5e6 url('./assets/down-arrow.png') 97% center no-repeat ;
 }
 
 
 @media only screen and (max-width: 768px) {
     .select{
         margin: 12px 0px;
+        width: 80%;
     }
   }
 
